Fixed gap between section sign and section navigation.
Reason added a class of .navListItem to LIs in the section navigation and modules_mod.css added top and bottom margins to it. Overrode it with by adding margin:0 to an already existing selector of higher specificity.

--- a/stylesheets/luther2010/master.css
+++ b/stylesheets/luther2010/master.css
@@ -447,6 +447,7 @@ header.global #luther-logo {
 }
 #nav-section li {
  border-bottom:0.0833333em solid #c7d8ea;
+ margin:0;
  padding:.416666em 3px .25em;	
 }
 #nav-section li li {
